--- a/content/blog/3g-2g.md
+++ b/content/blog/3g-2g.md
@@ -5,7 +5,7 @@ slug: ""
 description: "Indonesia decided to kill 3G networks, but keep older 2G standards."
 keywords: []
 draft: false
-tags: []
+tags: [tech-rant]
 math: false
 toc: false
 ---
